@@ -1,6 +1,7 @@
 Changes since 5.0.rc1
 =====================
 
+* NEW grey out key entries when corresponding plot is toggled off
 * CHANGE apply "set key {no}enhanced}" to the key title
 * FIX wxgtk3 requires initialization of Xthreads
 * FIX width adjustment for long key title in multicolumn keys
